web-client/src/Components/Views/LandingPage/_LandingPage.scss
.landing-page__header {
  width: 100%;
  position: relative;
  margin: 0 auto;
  max-width: 1600px;

  .landing-page__header__bg {
    position: absolute;
    z-index: -1;
    top: 0;
    right: 0;
    width: 60%;
    height: 70vw;
    max-height: 950px;
    background-image: linear-gradient(to right, #3955f2, #5d73f4);

    @media #{$desktop} {
      height: 90vw;
    }

    @media #{$tablet} {
      height: 105vw;
      width: 100%;
      min-height: 750px;
    }

    @media #{$mobile} {
      height: 105vw;
      min-height: 650px;
    }
  }

  .header__navbar {
    width: 100%;
    height: 80px;
    padding: 20px 3% 0;
    display: flex;
    justify-content: space-between;
    align-items: center;

    @media #{$mobile} {
      flex-direction: row;
    }

    .burning-heart__name {
      font-size: 3.8rem;
      font-weight: 700;
      color: #ffb2b3;

      @media #{$desktop} {
        font-size: 3rem;
      }

      @media #{$mobile} {
        font-size: 2.4rem;
        align-items: flex-start;
      }
    }

    .burning-heart__name--open {
      margin-top: 10px;
    }

    .navbar__hamburger {
      display: none;

      @media #{$mobile} {
        display: flex;
        width: 40px;
        height: 40px;
        margin-top: 1px;
        cursor: pointer;

        &:hover {
          opacity: 0.8;
        }
      }
    }

    .navbar__hamburger--open {
      margin-top: 3px;
    }

    .navbar__links {
      width: 55%;
      max-width: 1000px;
      display: flex;
      justify-content: flex-end;
      margin-top: 10px;

      @media #{$mobile} {
        display: none;
      }

      a {
        width: 20%;
        text-align: right;
        color: white;
        font-size: 1.6rem;
        font-weight: 700;

        @media #{$desktop} {
          width: 30%;
        }

        @media #{$mobile} {
          text-align: left;
        }
      }
    }
  }

  .header__navbar--open {
    height: 100vh;
    width: 100%;
    padding-top: 28px;
    background: black;
    align-items: flex-start;
  }

  .header__banner {
    display: flex;
    justify-content: flex-start;

    @media #{$tablet} {
      flex-direction: column-reverse;
    }

    .header__image {
      z-index: 15;
      margin-top: 100px;
      width: 50%;
      max-width: 1100px;

      @media #{$tablet} {
        width: 70%;
        align-self: flex-end;
      }

      @media #{$mobile} {
        width: 90%;
      }
    }

    .header__content {
      margin: 100px 0 0 3%;
      max-width: 40%;

      @media #{$tablet} {
        max-width: 80%;
      }

      @media #{$tablet} {
        margin-top: 50px;
      }

      h2 {
        font-size: 5rem;
        color: white;
        font-weight: 700;

        @media #{$desktop} {
          font-size: 4rem;
        }

        @media #{$mobile} {
          font-size: 3rem;
        }
      }

      p {
        font-family: "Montserrat", sans-serif;
        font-size: 2.4rem;
        color: white;
        font-weight: 700;
        line-height: 1.5;
        margin-top: 50px;

        @media #{$max-desktop} {
          margin-top: 30px;
          font-size: 2rem;
        }

        @media #{$mobile} {
          font-size: 1.6rem;
        }
      }

      button {
        margin-top: 50px;
        height: 50px;
        width: 200px;
        border-radius: 50px;
        background: #ffb2b3;
        color: white;
        font-weight: 700;
        font-size: 1.6rem;
        border: 1px solid #ffb2b3;
        cursor: pointer;

        &:hover {
          color: #ffb2b3;
          background: white;
        }
      }
    }
  }
}

.middle__content {
  width: 100%;
  margin: 0 auto;
  max-width: 1600px;
  padding-bottom: 100px;

  @media #{$tablet} {
    position: relative;

    .mobile__bg {
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 450px;
      background: linear-gradient(to right, #ffff51, #ffffa0);
      z-index: -1;
    }
  }

  .demo__information {
    width: 100%;
    padding: 0 3%;
    display: flex;
    justify-content: space-between;

    @media #{$tablet} {
      display: flex;
      flex-direction: column;
    }

    .demo__content {
      margin-top: 240px;
      width: 45%;
      font-weight: 700;
      color: #ffb2b3;

      @media #{$desktop} {
        margin-top: 350px;
      }

      @media #{$tablet} {
        margin-top: 90px;
        width: 100%;
      }

      .demo__header {
        font-size: 5rem;

        @media #{$max-desktop} {
          font-size: 4rem;
        }

        @media #{$tablet} {
          text-align: center;
        }

        @media #{$mobile} {
          font-size: 3rem;
        }
      }

      .demo__text {
        line-height: 1.5;
        margin-top: 50px;
        font-family: "Montserrat", sans-serif;
        font-size: 2.4rem;

        @media #{$max-desktop} {
          margin-top: 30px;
          font-size: 2rem;
        }

        @media #{$tablet} {
          text-align: center;
          padding: 0 5%;
        }

        @media #{$mobile} {
          font-size: 1.6rem;
        }
      }
    }

    .iphone__picture {
      width: 280px;
      margin: 100px 15% 0 0;
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;

      @media #{$max-desktop} {
        margin: 70px 13% 0 0;
      }

      @media #{$tablet} {
        margin: 100px auto 0;
      }

      .fire-gif {
        width: 40%;
        position: absolute;
      }
    }
  }
}

.footer__content {
  background-image: linear-gradient(to right, #f7f8f9, #e9eeef);
  width: 100%;
  max-width: 1600px;
  padding: 82px 3% 62px;
  margin: 0 auto 0;
  display: flex;
  justify-content: space-between;

  @media #{$tablet} {
    flex-direction: row;
  }

  @media #{$mobile} {
    flex-direction: column;
    padding-bottom: 72px;
  }

  .logo__address {
    .footer__logo-name {
      height: 70px;
      width: 320px;
      background: black;

      @media #{$tablet} {
        width: 260px;
        height: 60px;
      }

      @media #{$mobile} {
        margin-bottom: 50px;
      }

      h2 {
        line-height: 70px;
        width: 100%;
        text-align: center;
        font-size: 3.8rem;
        font-weight: 700;
        color: white;

        @media #{$tablet} {
          font-size: 3rem;
          line-height: 60px;
        }
      }
    }

    address {
      p {
        font-weight: 700;
        margin-top: 20px;
      }
    }
  }

  .footer__social__navbar {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    width: 55%;

    @media #{$tablet} {
      flex-direction: row;
      align-items: flex-start;
    }

    @media #{$mobile} {
      flex-direction: column;
      width: 100%;
    }

    .footer__navbar__links {
      display: flex;
      justify-content: flex-end;
      width: 100%;
      max-width: 600px;

      @media #{$tablet} {
        max-width: 800px;
        flex-direction: column;
        margin-top: 80px;
      }

      @media #{$mobile} {
        margin-top: 50px;
      }

      a {
        text-align: right;
        width: 20%;
        color: black;
        font-size: 1.6rem;
        font-weight: 700;

        @media #{$tablet} {
          width: 70px;
          text-align: left;
          margin: 0 15% 20px;
        }

        @media #{$mobile} {
          margin: 0 0 20px;
        }
      }
    }

    .footer__social__links {
      display: flex;
      justify-content: flex-end;
      width: 100%;
      margin-top: 120px;

      @media #{$tablet} {
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-end;
        margin-top: 0;
        width: 25%;
      }

      @media #{$mobile} {
        flex-direction: row;
        width: 100%;
      }

      .social__link {
        width: 50px;
        height: auto;
        margin: 20px 0 0 6%;

        @media #{$tablet} {
          margin: 0 0 8px;
          width: 40px;
        }

        @media #{$mobile} {
          margin: 30px 5% 0 0;
        }

        &:hover {
          opacity: 0.7;
        }
      }
    }
  }
}

